<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:showIn="@layout/activity_main">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <hu.ait.android.andwallet.PrefixEditText
            android:id="@+id/etItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item"
            android:tag="" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <hu.ait.android.andwallet.PrefixEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:tag="@string/text_currency" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>